Fix #118, Trash icon not aligned in Ongoing

--- a/services/ui/css/material-ui-customizations.css
+++ b/services/ui/css/material-ui-customizations.css
@@ -24,7 +24,7 @@ input {
 	padding: 12px 0px 12px 0px !important;
 }
 
-.MuiInputBase-root .MuiAvatar-img {
-	width: 50%  !important;
-	height: 50% !important;
+.MuiAvatar-root {
+	width: 22px !important;
+	height: 22px !important;
 }
